# esp32-rust

./: .gitignore  Cargo.toml  diagram.json  espflash.toml  flash_sr_models.sh  readme.md  sdkconfig  sdkconfig copy 2.defaults  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
assets/: sound.pcm
assets/html/: config_wifi.html
components/button/: bindings.h
components/button/espressif__button_v4_1_5/: CMakeLists.txt
components/espressif/esp-sr/: bindings.h
components/espressif/esp-sr/master/test_apps/esp-sr/: sdkconfig.ci.mn2_cn
components/espressif__esp-sr/: bindings.h
scripts/: export-bin.sh  flash_sr_models.sh  open_idf_svc_doc.sh  open_other_projects.sh
src/: application.rs  lcd.rs  lib.rs  main copy.rs  main.rs  main1.rs
src/audio/: audio_codec.rs  es8311.rs  mod.rs  xiaozhi_audio_codec.rs
src/audio/codec/: audio_codec.rs  mod.rs  types.rs  xiaozhi_audio_codec.rs
src/audio/codec/es7210/: enums.rs  es7210 copy.rs  es7210.rs  reg.rs
src/audio/codec/es8311/: es8311.rs  reg.rs
src/audio/codec/opus/: decoder.rs  encoder.rs
src/audio/es7210/: coeff.rs  es7210.rs  mod.rs  reg.rs
src/audio/es8311/: es8311.rs  mod.rs
src/audio/opus/: decoder.rs  encoder.rs
src/audio/processor/: afe_audio_processor.rs  afe_audio_processor_new.rs  audio_processor.rs  mod.rs  no_audio_processor.rs
src/axp173/: adc.rs  irq.rs  mod.rs  regs.rs
src/boards/: board.rs  jianglian_s3cam_board.rs  mod.rs
src/boards/common/: mod.rs
src/common/: application_context.rs  button.rs  converter.rs  enums.rs  event.rs  gpio_button.rs  httpd_server.rs  mod.rs  qrcode.rs
src/display/: mod.rs
src/display/lcd/: mod.rs  st7789.rs
src/i2s/: mixed_i2s.rs  mod.rs
src/led/: mod.rs
src/protocols/: mod.rs  protocol.rs
src/protocols/websocket/: message.rs  mod.rs  ws_protocol.rs
src/setting/: mod.rs  nvs_setting.rs
src/utils/: bits.rs  ffi.rs  md5.rs  mod.rs
src/wifi/: mod.rs  ssid_manager.rs  wifi_driver.rs
