[package]
name = "xiaoxin_esp32"
version = "0.1.0"
authors = ["任懷林 <renhuailin@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "xiaoxin_esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
# esp-idf-svc = "0.51"
esp-idf-svc =  { version = "0.51", features = ["default","alloc"] }


# esp-idf-hal = "0.45.2"
esp-idf-hal = { version = "=0.45.2", features = ["rmt-legacy"] }

esp-idf-sys = { version = "0.36.1", features = ["binstart"] }

ili9341 = "0.5.0"
# 嵌入式图形库，用于绘制文本和形状
embedded-graphics = "0.8.1"
# MIPI-DSI 接口（ILI9341 依赖它）
mipidsi = "0.7.1"
# 用于提供延时
embedded-hal = "0.2.7"

display-interface-spi = "0.4.1"


# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }
anyhow = "1"
toml-cfg = "0.2.0"
# axp173 = "0.1.7"
# axp173 = { git = "https://github.com/renhuailin/axp173-rs.git" }
rgb = "0.8.52"
lewton = "0.10.2"

byteorder = { version = "1", default-features = false }
bitflags = "1"
bit_field = "0.10"
shared-bus = "0.3.1"
futures = "0.3.31"
thiserror = "2.0.16"
crossbeam-channel = "0.5.15"
serde_json = "1.0.145"
bytemuck = "1.24.0"

[package.metadata.esp-idf-sys]
extra_components = [
    { component_dirs = [ "components/libopus" ], bindings_header = "components/libopus/bindings.h", bindings_module = "es32_component_opus" },
    { component_dirs = [ "components/button" ], bindings_header = "components/button/bindings.h", bindings_module = "es32_component_button" },
    { remote_component = { name = "espressif/esp_websocket_client", version = "1.5.0" } },
]

[build-dependencies]
embuild = "0.33"